<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/custom_row_bacground"

    android:descendantFocusability="blocksDescendants"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/open_book"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:id="@+id/bookCoverIVID"
            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="1dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/black"
                android:id="@+id/bookNameTVID"
                android:text="@string/book_name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_orange_dark"
                android:id="@+id/bookCategoryTVID"
                android:text="@string/bookType"
                android:textStyle="italic"

                />


        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:text="@string/quantity"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/bookQtyTVID"

                />

        </LinearLayout>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"


        >
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/writenew"
            android:adjustViewBounds="true"
            android:background="@drawable/action_btn_layout"
            android:scaleType="centerInside"
            android:id="@+id/editBookIBID"
            android:contentDescription="@string/editBookDetails"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/trash"
            android:adjustViewBounds="true"
            android:background="@drawable/action_btn_layout"
            android:scaleType="centerInside"
            android:id="@+id/deleteBookIBID"
            android:contentDescription="@string/deleteBook"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/overflowdots"
            android:adjustViewBounds="true"
            android:background="@drawable/action_btn_layout"
            android:scaleType="centerInside"
            android:id="@+id/detailBookInfoIBID"
            android:contentDescription="@string/detailsOfBook"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/new_item"
            android:adjustViewBounds="true"
            android:background="@drawable/action_btn_layout"
            android:scaleType="centerInside"
            android:id="@+id/addBookQtyIBID"
            android:contentDescription="@string/addQuantity"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/next"
            android:adjustViewBounds="true"
            android:background="@drawable/action_btn_layout"
            android:scaleType="centerInside"
            android:id="@+id/borrowBookIBID"
            android:contentDescription="@string/borrow"
            />



    </LinearLayout>

</LinearLayout>