<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quantity"
            android:textAppearance="?android:textAppearanceLarge"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:inputType="number"
            android:textAppearance="?android:textAppearanceLarge"
            android:id="@+id/newQuantityETID"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAppearance="?android:textAppearanceLarge"
            android:id="@+id/addBookBtnCancel"
            android:background="@drawable/custom_dialog_btn"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:id="@+id/addBookBtnDone"
            android:background="@drawable/custom_dialog_btn"
            />

    </LinearLayout>


</LinearLayout>