<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainActivityBack"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.azharul.android.personal_library_tracker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/addNewBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/btn_click"
            android:text="@string/addBook"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/btn_click"
            android:onClick="goToBookList"
            android:text="@string/bookList"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/borrowBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/btn_click"
            android:text="@string/borrowBook"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/returnBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/btn_click"
            android:text="@string/returnBook"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />


    </LinearLayout>


</LinearLayout>
