<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.azharul.android.personal_library_tracker.SplashActivity"
    android:orientation="vertical"
    android:background="@drawable/splash_background"
    >




    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        android:ems="@android:integer/config_longAnimTime"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView4"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:text="@string/group"
        android:textStyle="italic"
        android:textSize="40sp"
        android:gravity="left"
        android:ems="@android:integer/config_longAnimTime"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:text="@string/tracker"
        android:textStyle="italic|bold"
        android:textSize="60sp"
        android:gravity="left"
        android:ems="@android:integer/config_longAnimTime"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:text="@string/library"
        android:textStyle="italic|bold"
        android:textSize="60sp"
        android:gravity="left"
        android:ems="@android:integer/config_longAnimTime"
        android:layout_above="@+id/textView2"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:text="@string/personal"
        android:textStyle="italic|bold"
        android:textSize="60sp"
        android:gravity="left"
        android:ems="@android:integer/config_longAnimTime"
        android:layout_above="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginEnd="30dp"
        android:id="@+id/textView4" />

</RelativeLayout>
